--- a/src/scss/utilities/_config.scss
+++ b/src/scss/utilities/_config.scss
@@ -40,4 +40,4 @@ $base__line       :  1.5;
 
 $brkpoint--sm    : 320px;
 $brkpoint--md    : 768px;
-$brkpoint--lg    : 1200px;
+$brkpoint--lg    : 1024px;
